# ClearSAR

./: .gitignore  README.md  nc_wandb_agent.sh  nc_wandb_agent.sub  pyproject.toml  requirements.txt
configs/: finetune_clearsar.yaml  finetune_clearsar_medium_muon.yaml  finetune_clearsar_sweep_base.yaml
eotdl-env/: pyvenv.cfg
outputs/sardet/: config.json
scripts/: augmentation.py  finetune_clearsar.py  prepare_sardet_coco.py  train_sardet.py  train_sardet_config.example.json  wandb_sweep_finetune_clearsar.example.yaml  wandb_sweep_sardet.example.yaml
source/: pyvenv.cfg
src/model/: __init__.py  model.py
src/model/backbone/: __init__.py  dinov2_backbone.py  summit_backbone.py
src/model/detectors/: __init__.py  deformable_detr_head.py
src/model/detectors/ops/: ms_deform_attn.py
src/optim/: __init__.py  kl_shampoo.py  muon.py
